fix: image overflow

--- a/assets/styles/body.sass
+++ b/assets/styles/body.sass
@@ -17,8 +17,6 @@ section
     font-family: 'Basis Grotesk Bold', Helvetica, Arial, sans-serif
     font-size: 2rem
     margin-bottom: 3rem
-  img
-    max-width: 100%
 
 .section
   &-Talents
@@ -28,6 +26,9 @@ section
     justify-content: space-between
     h1
       display: inline-block
+  &-Academy
+    img
+      max-width: 100%
 
 .tagList
   display: flex
